Clean trigonometric applicability declaration