@@ -5,7 +5,6 @@ import de.regelsuche.ast.BinaryExpr;
 import de.regelsuche.ast.BinaryOperator;
 import de.regelsuche.ast.Expr;
 import de.regelsuche.ast.FunctionExpr;
-import de.regelsuche.ast.NumberExpr;
 import de.regelsuche.parse.ExpressionFormatter;
 import de.regelsuche.transform.PatternExpr;
 import de.regelsuche.transform.PatternRewriteRule;
@@ -36,7 +35,6 @@ public final class TrigonometricRules {
         PatternExpr sinSquared = PatternExpr.op(BinaryOperator.POW, sinA, PatternExpr.num(2));
         PatternExpr cosSquared = PatternExpr.op(BinaryOperator.POW, cosA, PatternExpr.num(2));
         return List.of(
-            // sin(A)^2 + cos(A)^2 -> 1
             new PatternRewriteRule(
                 "trig_pythagorean_sin_cos",
                 PatternExpr.op(BinaryOperator.ADD, sinSquared, cosSquared),
@@ -44,9 +42,7 @@ public final class TrigonometricRules {
                 RewriteKind.SIMPLIFY,
                 false,
                 -4,
-                true
-            ),
-            // cos(A)^2 + sin(A)^2 -> 1 (different argument order)
+                true),
             new PatternRewriteRule(
                 "trig_pythagorean_cos_sin",
                 PatternExpr.op(BinaryOperator.ADD, cosSquared, sinSquared),
@@ -54,9 +50,7 @@ public final class TrigonometricRules {
                 RewriteKind.SIMPLIFY,
                 false,
                 -4,
-                true
-            ),
-            // 1 - sin(A)^2 -> cos(A)^2
+                true),
             new PatternRewriteRule(
                 "trig_one_minus_sin_squared",
                 PatternExpr.op(BinaryOperator.SUB, PatternExpr.num(1), sinSquared),
@@ -64,9 +58,7 @@ public final class TrigonometricRules {
                 RewriteKind.NORMALIZE,
                 false,
                 0,
-                true
-            ),
-            // 1 - cos(A)^2 -> sin(A)^2
+                true),
             new PatternRewriteRule(
                 "trig_one_minus_cos_squared",
                 PatternExpr.op(BinaryOperator.SUB, PatternExpr.num(1), cosSquared),
@@ -74,11 +66,8 @@ public final class TrigonometricRules {
                 RewriteKind.NORMALIZE,
                 false,
                 0,
-                true
-            ),
-            // tan(A) -> sin(A) / cos(A) — only useful for derivations, surfaces an assumption
+                true),
             new TanToSinOverCosRule(),
-            // sin(2*A) -> 2*sin(A)*cos(A)
             new PatternRewriteRule(
                 "trig_double_angle_sin",
                 PatternExpr.fn("sin", PatternExpr.op(BinaryOperator.MUL, PatternExpr.num(2), a)),
@@ -88,9 +77,7 @@ public final class TrigonometricRules {
                 RewriteKind.EXPAND,
                 true,
                 4,
-                true
-            ),
-            // cos(2*A) -> cos(A)^2 - sin(A)^2
+                true),
             new PatternRewriteRule(
                 "trig_double_angle_cos",
                 PatternExpr.fn("cos", PatternExpr.op(BinaryOperator.MUL, PatternExpr.num(2), a)),
@@ -98,14 +85,10 @@ public final class TrigonometricRules {
                 RewriteKind.EXPAND,
                 true,
                 4,
-                true
-            )
-        );
+                true));
     }
 
-    /**
-     * {@code tan(A) -> sin(A) / cos(A)} with the assumption {@code cos(A) != 0}.
-     */
+    /** {@code tan(A) -> sin(A) / cos(A)} with {@code cos(A) != 0}. */
     static final class TanToSinOverCosRule
             implements RewriteRule, RewriteApplicabilitySchemaProvider {
         @Override
@@ -147,8 +130,7 @@ public final class TrigonometricRules {
             return new BinaryExpr(
                 new FunctionExpr("sin", argument),
                 BinaryOperator.DIV,
-                new FunctionExpr("cos", argument)
-            );
+                new FunctionExpr("cos", argument));
         }
 
         @Override
@@ -158,14 +140,14 @@ public final class TrigonometricRules {
 
         @Override
         public List<Assumption> assumptions(Expr subtree) {
-            if (!(subtree instanceof FunctionExpr tan) || !"tan".equals(tan.name()) || tan.arguments().isEmpty()) {
+            if (!(subtree instanceof FunctionExpr tan)
+                    || !"tan".equals(tan.name())
+                    || tan.arguments().size() != 1) {
                 return List.of();
             }
-            Expr argument = tan.arguments().get(0);
-            // Symbol payload contains the function-call form `cos(arg)`. The SMT
-            // bridge parses function calls via `toSmtExpr`, the Lean bridge
-            // emits the expression text — both targets render this correctly.
-            return List.of(Assumption.nonZero("cos(" + ExpressionFormatter.format(argument) + ")"));
+            Expr argument = tan.arguments().getFirst();
+            return List.of(Assumption.nonZero(
+                "cos(" + ExpressionFormatter.format(argument) + ")"));
         }
 
         @Override
@@ -179,14 +161,5 @@ public final class TrigonometricRules {
                 List.of(RequiredAssumptionTemplate.nonZero(
                     PatternExpr.fn("cos", argument))));
         }
-    }
-
-    /**
-     * Helper used by {@link RuleDomainRegistry} for the simple
-     * pattern rules above. Not used directly outside this package.
-     */
-    @SuppressWarnings("unused")
-    private static NumberExpr numberHelperPlaceholder() {
-        return new NumberExpr(0);
     }
 }
